--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "format": "prettier --write \"{,!(.next)/**/}*.{js, jsx}\""
+    "format": "prettier --write \"{,!(.next)/**/}*.{js, jsx}\"",
+    "export": "npm run build && next export && mv out _static"
   },
   "dependencies": {
     "@emotion/react": "^11.10.4",
